--- a/resources/assets/less/website/home.less
+++ b/resources/assets/less/website/home.less
@@ -14,8 +14,11 @@ body.home {
             .intro {
                 margin: auto;
                 max-width: 700px;
-                .intro-description { white-space: nowrap; }
                 .intro-information { margin-top: 35px; }
+
+                @media (min-width: @screen-md-min) {
+                    .intro-description { white-space: nowrap; }
+                }
 
                 @media (max-width: 385px) {
                     font-size: 13px;
